# rericom_test_task

./: README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/api/: models.py  producers.py  serializers.py  urls.py  views.py
backend/core/: settings.py
listener/: Dockerfile  pyproject.toml
listener/app/: __main__.py
